--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -24,3 +24,7 @@
         <%= f.submit %>
     </p>
 <% end %>
+
+<p>
+    <%= link_to "Cancel and return to list of articles", articles_path %>
+</p>
