--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,7 @@
 
 <p><strong>Title: </strong><%= @article.title %></p>
 <p><strong>Description: </strong><%= @article.description %></p>
+
+<p>
+    <%= link_to "Return to list of articles", articles_path %>
+</p>
