Refactor Articles views using partials

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <p><%= flash[:notice]%></p>
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </body>
 </html>
