--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,30 +1,4 @@
 <h1>Create a new Article</h1>
 
-<% if flash[:errors] %>
-  <div>
-    <p><strong>Errors</strong></p>
-    <ul>
-        <% flash[:errors].each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
-    </ul>
-  </div>
-<% end %>
-
-<%= form_with scope: :article, url: articles_path, local: true do |f| %>
-    <p>
-        <%= f.label :title %><br/>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%= f.label :description %><br/>
-        <%= f.text_area :description %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
-<% end %>
-
-<p>
-    <%= link_to "Cancel and return to list of articles", articles_path %>
-</p>
+<%= render 'errors_msgs' %>
+<%= render 'form' %>
