--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,11 +51,20 @@ body {
   flex: 1 0 auto;
   background-color: lightgrey;
   padding-top: 20px;
-  height: 100%;
+  height: calc(100% - 5em);
+}
+
+.jumbotron {
+  margin: 0;
 }
 
 #sticky-footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-} 
+  height: 5em;
+
+  a {
+    color: white;
+  }
+}
