--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer id="sticky-footer" class="py-4 bg-dark text-white">
     <div class="container text-center">
-        <small>Copyright &copy; ggorg03</small>
+        <small>Copyright &copy; <%= personal_linkedin_link %></small>
     </div>
 </footer>
