--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,26 @@
-<h1>Listing articles</h1>
+<h1>Listing all articles</h1>
 <p>
-  <%= link_to "+ Create new article", new_article_path %>
+  <%= link_to "+ Create new article", new_article_path, class: "btn btn-success" %>
 </p>
-<table>
-    <thead>
-        <tr>
-          <th>Title</th>
-          <th>Description</th>
-          <th colspan="3">Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @articles.each do |article| %>
-            <tr>
-              <td><%= article.title %></td>
-              <td><%= article.description %></td>
-              <td><%= link_to "Show", article_path(article) %></td>
-              <td><%= link_to "Edit", edit_article_path(article) %></td>
-              <td><%= link_to "Delete", article_path(article), :method => :delete %></td>
-            </tr>
-        <% end %>
-    </tbody>
-</table>
+
+<div class="row justify-content-center">
+  <div class="col-8">
+    <% @articles.each do |article| %>
+      <div class="card text-center shadow mb-5 bg-white rounded">
+        <div class="card-header font-italic">
+          by Gustavo Gorgônio
+        </div>
+        <div class="card-body">
+          <h5 class="card-title text-success"><%= article.title %></h5>
+          <p class="card-text"><%= article.description.truncate(50) %></p>
+          <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
+          <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
+          <%= link_to "Delete", article_path(article), class: "btn btn-outline-danger", method: :delete %>
+        </div>
+        <div class="card-footer text-muted">
+          <%= created_edited_time_ago_in_words(article) %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
