--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: 425px;
+  margin: 0;
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -48,21 +49,15 @@ body {
 }
 
 #page-content {
+  padding-top: 25px;
+  padding-bottom: 25px;
   flex: 1 0 auto;
   background-color: lightgrey;
-  padding-top: 20px;
-}
-
-.jumbotron {
-  margin: 0;
 }
 
 #sticky-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 5em;
-
+  flex-shrink: none;
+  
   a {
     color: white;
   }
