--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing all articles</h1>
+<h1 class="d-flex justify-content-center">Listing all articles</h1>
 <p>
   <%= link_to "+ Create new article", new_article_path, class: "btn btn-success" %>
 </p>
 
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-sm-8">
     <% @articles.each do |article| %>
       <div class="card text-center shadow mb-5 bg-white rounded">
         <div class="card-header font-italic">
