--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -61,3 +61,17 @@ body {
     color: white;
   }
 }
+
+.alert {
+  margin: 0;
+}
+
+.card-text {
+  p {
+    text-align: justify;
+  }
+}
+
+h1, h2, h3, h4 {
+  font-weight: bold;
+}
