--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-10">
+        <%= render 'errors_msgs' %>
+
         <%= form_with model: @article, class: "shadow p-5 mb-5 bg-dark rounded", local: true do |f| %>
             <div class="form-group row">
                 <%= f.label :title, class: "col-sm-2 col-form-label font-weight-bold text-light" %>
