--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,3 @@
-<h1>Edit Article</h1>
+<h1 class="d-flex justify-content-center">Edit Article</h1>
 
-<%= render 'errors_msgs' %>
 <%= render 'form' %>
