--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,19 @@
-<h1>This shows an article</h1>
+<h3 class="d-flex justify-content-center"><%= @article.title %></h3>
 
-<p><strong>Title: </strong><%= @article.title %></p>
-<p><strong>Description: </strong><%= @article.description %></p>
-
-<p>
-    <%= link_to "Return to list of articles", articles_path %>
-</p>
+<div class="row justify-content-center">
+    <div class="col-sm-8">
+        <div class="card text-center shadow mb-5 bg-white rounded">
+            <div class="card-header font-italic">
+                by Gustavo Gorgônio
+            </div>
+            <div class="card-body">
+                <div class="card-text"><%= simple_format(@article.description) %></div>
+                <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
+                <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete %>
+            </div>
+            <div class="card-footer text-muted">
+                <%= created_edited_time_ago_in_words(@article) %>
+            </div>
+        </div>
+    </div>
+</div>
