--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,23 +1,23 @@
 <div class="row justify-content-center">
-    <div class="col-10">
+    <div class="col-md-10">
         <%= render 'errors_msgs' %>
 
         <%= form_with model: @article, class: "shadow p-5 mb-5 bg-dark rounded", local: true do |f| %>
             <div class="form-group row">
-                <%= f.label :title, class: "col-sm-2 col-form-label font-weight-bold text-light" %>
-                <div class="col-sm-10">
+                <%= f.label :title, class: "col-md-2 col-form-label font-weight-bold text-light" %>
+                <div class="col-md-10">
                     <%= f.text_field :title, class: "form-control", placeholder:"Title of the article" %>
                 </div>
             </div>
             <div class="form-group row">
-                <%= f.label :description, class: "col-sm-2 col-form-label font-weight-bold text-light" %>
-                <div class="col-sm-10">
+                <%= f.label :description, class: "col-md-2 col-form-label font-weight-bold text-light" %>
+                <div class="col-md-10">
                     <%= f.text_area :description, rows: 10, class: "form-control", placeholder:"Description of the article" %>
                 </div>
             </div>
-            <div class="form-group row justify-content-begin">
-                <%= f.submit class:"btn btn-success btn-lg" %>
-                <%= link_to "Cancel", articles_path, class:"btn btn-danger btn-lg" %>
+            <div class="form-group row justify-content-end">
+                <%= f.submit class:"btn btn-outline-light btn-lg mr-3" %>
+                <%= link_to "Cancel", articles_path, class:"btn btn-outline-light btn-lg" %>
             </div>
         <% end %>
     </div>
