--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,3 @@
-<h1 class="d-flex justify-content-center">Edit Article</h1>
+<h1 class="d-flex justify-content-center page-title">Edit Article</h1>
 
 <%= render 'form' %>
