--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Create a new Article</h1>
+<h1 class="d-flex justify-content-center page-title">Create a new Article</h1>
 
 <%= render 'form' %>
