--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,7 +9,10 @@
             <div class="card-body">
                 <div class="card-text"><%= simple_format(@article.description) %></div>
                 <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
-                <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete %>
+                <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger",
+                      :method => :delete,
+                      :data => { confirm: 'Are you sure?' }
+                %>
             </div>
             <div class="card-footer text-muted">
                 <%= created_edited_time_ago_in_words(@article) %>
