--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
     <% @articles.each do |article| %>
       <div class="card text-center shadow mb-5 bg-white rounded">
         <div class="card-header font-italic">
-          by Gustavo Gorgônio
+          by <%= article.user.username %>
         </div>
         <div class="card-body">
           <h5 class="card-title text-success"><%= article.title %></h5>
