--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
     <div class="col-sm-8">
         <div class="card text-center shadow mb-5 bg-white rounded">
             <div class="card-header font-italic">
-                by Gustavo Gorgônio
+                by <%= @article.user.username %>
             </div>
             <div class="card-body">
                 <div class="card-text"><%= simple_format(@article.description) %></div>
