--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
     <div class="col-md-10">
-        <%= render 'errors_msgs' %>
+        <%= render 'shared/errors_msgs' %>
 
         <%= form_with model: @article, class: "shadow p-5 mb-5 bg-dark rounded", local: true do |f| %>
             <div class="form-group row">
