--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,9 +4,9 @@
 
         <%= form_with model: @user, class: "shadow p-5 mb-5 bg-dark rounded", local: true do |f| %>
             <div class="form-group row">
-                <%= f.label :uername, class: "col-md-2 col-form-label font-weight-bold text-light" %>
+                <%= f.label :username, class: "col-md-2 col-form-label font-weight-bold text-light" %>
                 <div class="col-md-10">
-                    <%= f.text_field :uername, class: "form-control", placeholder:"Create an username" %>
+                    <%= f.text_field :username, class: "form-control", placeholder:"Create an username" %>
                 </div>
             </div>
             <div class="form-group row">
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="form-group row justify-content-end">
-                <%= f.submit class:"btn btn-outline-light btn-lg mr-3" %>
+                <%= f.submit "Sign up!", class:"btn btn-outline-light btn-lg mr-3" %>
                 <%= link_to "Cancel", root_path, class:"btn btn-outline-light btn-lg" %>
             </div>
         <% end %>
