--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="form-group row justify-content-end">
-                <%= f.submit "Sign up!", class:"btn btn-outline-light btn-lg mr-3" %>
+                <%= f.submit form_action_name(@user), class:"btn btn-outline-light btn-lg mr-3" %>
                 <%= link_to "Cancel", root_path, class:"btn btn-outline-light btn-lg" %>
             </div>
         <% end %>
