--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,7 @@
 
 <%= gravatar_image @user, size: 200 %>
 
+<div class="text-center mb-4">
+    <%= link_to "Update your profile", edit_user_path(@user), class: "btn btn-info" %>
+</div>
 <%= render 'articles/articles_list' %>
