--- a/app/views/articles/_articles_list.html.erb
+++ b/app/views/articles/_articles_list.html.erb
@@ -3,7 +3,11 @@
     <% @articles.each do |article| %>
       <div class="card text-center shadow mb-5 bg-white rounded">
         <div class="card-header font-italic">
-          by <%= article.user.username %>
+          <% if @user %>
+            by <%= article.user.username %>
+          <% else %>
+            by <%= link_to article.user.username, user_path(article.user) %>
+          <% end %>
         </div>
         <div class="card-body">
           <h5 class="card-title text-success"><%= article.title %></h5>
