--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group row justify-content-end">
                 <%= f.submit form_action_name(@user), class:"btn btn-outline-light btn-lg mr-3" %>
-                <%= link_to "Cancel", root_path, class:"btn btn-outline-light btn-lg" %>
+                <%= link_to "Cancel", @user.new_record? ? root_path : user_path(@user), class:"btn btn-outline-light btn-lg" %>
             </div>
         <% end %>
     </div>
