--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,3 @@
-<h1 class="d-flex justify-content-center page-title">Sign up for Blog</h1>
+<h1 class="d-flex justify-content-center page-title">Update your profile</h1>
 
 <%= render 'form' %>
