--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,7 @@
 <h1 class="d-flex justify-content-center page-title">Listing all articles</h1>
 
 <%= render "articles_list" %>
+
+<div class="apple_pagination">
+    <%= will_paginate @articles, :container => false %>
+</div>
