--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,8 +20,12 @@
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
             </li>
-            <%= link_to "Login", login_path, class: "nav-link" %>
-            <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
+            <% if logged_in? %>
+                <%= link_to current_user.username, current_user , class: "nav-link" %>
+                <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
+            <% else %>
+                <%= link_to "Login", login_path, class: "nav-link" %>
+            <% end %>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
