restrict actions from UI based on whicth user is logged

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,11 @@
 <h3 class="d-flex justify-content-center"><%= @user.username %></h3>
 
 <%= gravatar_image @user, size: 200 %>
-
-<div class="text-center mb-4">
-    <%= link_to "Update your profile", edit_user_path(@user), class: "btn btn-info" %>
-</div>
+<% if logged_in? && @user == current_user %>
+    <div class="text-center mb-4">
+        <%= link_to "Update your profile", edit_user_path(@user), class: "btn btn-info" %>
+    </div>
+<% end %>
 
 <%= render 'articles/articles_list' %>
 
