--- a/app/views/articles/_articles_list.html.erb
+++ b/app/views/articles/_articles_list.html.erb
@@ -13,11 +13,13 @@
           <h5 class="card-title text-success"><%= article.title %></h5>
           <p class="card-text"><%= article.description.truncate(50) %></p>
           <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
-          <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
-          <%= link_to "Delete", article_path(article), class: "btn btn-outline-danger",
-                      :method => :delete,
-                      :data => { confirm: 'Are you sure?' }
-          %>
+          <% if logged_in? && article.user == current_user %>
+            <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
+            <%= link_to "Delete", article_path(article), class: "btn btn-outline-danger",
+                        :method => :delete,
+                        :data => { confirm: 'Are you sure?' }
+            %>
+          <% end %>
         </div>
         <div class="card-footer text-muted">
           <%= created_edited_time_ago_in_words(article) %>
