--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,9 @@
             </h5>
             <p class="card-text"><%= pluralize(user.articles.count, 'article') %></p>
             <%= link_to "View", user_path(user), class: "btn btn-outline-success" %>
-            <%= link_to "Edit", edit_user_path(user), class: "btn btn-outline-info" %>
+            <% if logged_in? && user == current_user %>
+              <%= link_to "Edit", edit_user_path(user), class: "btn btn-outline-info" %>
+            <% end %>
         </div>
         <div class="card-footer text-muted">
           <%= joined_time_ago_in_words(user) %>
