--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,13 +16,20 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <%= link_to "View Articles", articles_path, class:"dropdown-item" %>
                     <%= link_to "Create a new Article", new_article_path, class:"dropdown-item" %>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
                 </div>
             </li>
             <% if logged_in? %>
-                <%= link_to current_user.username, current_user , class: "nav-link" %>
-                <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <%= current_user.username %>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <%= link_to current_user.username, current_user , class:"dropdown-item" %>
+                        <%= link_to "Update your profile", edit_user_path(current_user), class:"dropdown-item" %>
+                        <div class="dropdown-divider"></div>
+                        <%= link_to "Logout", logout_path, class: "dropdown-item", method: :delete %>
+                    </div>
+                </li>
             <% else %>
                 <%= link_to "Login", login_path, class: "nav-link" %>
             <% end %>
