modify aplication messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 
   <body>
     <%= render 'layouts/navigation' %>
-    <%= render 'shared/messages' %>
+    <%= render 'shared/notice_msgs' %>
+    <%= render 'shared/alert_msgs' %>
     
     <div id="page-content">  
       <div class="container">
