--- a/app/views/shared/_errors_msgs.html.erb
+++ b/app/views/shared/_errors_msgs.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:errors] %>
-  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+  <div class="alert alert-danger alert-dismissible fade show mb-4" role="alert">
     <h4 class="alert-heading">Some errors occurred during form submission!</h4>
     <% flash[:errors].each_with_index do |msg, index| %>
       <%= '<hr>'.html_safe unless index == 0 %>
