--- a/app/views/shared/_notice_msgs.html.erb
+++ b/app/views/shared/_notice_msgs.html.erb
@@ -1,6 +1,6 @@
 <% if flash[:notice] %>
   <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <p> <%= flash[:notice] %> </p>
+    <%= flash[:notice] %>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
