--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,9 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <%= link_to "View Articles", articles_path, class:"dropdown-item" %>
-                    <%= link_to "Create a new Article", new_article_path, class:"dropdown-item" %>
+                    <% if logged_in? %>
+                        <%= link_to "Create a new Article", new_article_path, class:"dropdown-item" %>
+                    <% end %>
                 </div>
             </li>
             <% if logged_in? %>
