--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,6 @@
       </div>
     </div>
     <%= render 'layouts/footer'%>
+    <%= render 'users/modal_delete_form.html.erb' %>
   </body>
 </html>
