fixing layout and clean code

--- a/app/views/users/_modal_delete_form.html.erb
+++ b/app/views/users/_modal_delete_form.html.erb
@@ -20,11 +20,8 @@
                     <% end %>
                 </div>
                 <div class="modal-footer">
+                    <%= button_tag "Delete", class: "btn btn-outline-dark mr-3", form: "form_delete-user" %>
                     <%= button_tag "Cancel" ,class:"btn btn-outline-dark", :data => {dismiss: "modal"} %>
-                    <%= button_tag "Delete", class: "btn btn-outline-dark mr-3",
-                                            form: "form_delete-user",
-                                            :data => { confirm: 'Are you sure?' }
-                    %>
                 </div>
             </div>
         </div>
