--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h3 class="d-flex justify-content-center"><%= @user.username %></h3>
+<h3 class="d-flex justify-content-center text-center"><%= @user.username %></h3>
 
 <%= gravatar_image @user, size: 200 %>
 
