--- a/app/views/articles/_articles_list.html.erb
+++ b/app/views/articles/_articles_list.html.erb
@@ -3,7 +3,7 @@
     <% @articles.each do |article| %>
       <div class="card text-center shadow mb-5 bg-white rounded">
         <div class="card-header font-italic">
-          <% if @user %>
+          <% if article.user == current_user %>
             by <%= article.user.username %>
           <% else %>
             by <%= link_to article.user.username, user_path(article.user) %>
@@ -13,7 +13,7 @@
           <h5 class="card-title text-success"><%= article.title %></h5>
           <p class="card-text"><%= article.description.truncate(50) %></p>
           <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
-          <% if logged_in? && article.user == current_user %>
+          <% if logged_in? && (article.user == current_user || current_user.admin?) %>
             <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
             <%= link_to "Delete", article_path(article), class: "btn btn-outline-danger",
                         :method => :delete,
