--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,6 +16,13 @@
             <% if logged_in? && user == current_user %>
               <%= link_to "Edit", edit_user_path(user), class: "btn btn-outline-info" %>
             <% end %>
+            <% if logged_in? && current_user.admin? && user != current_user %>
+              <%= link_to "Delete Profile", user_path(user), 
+                                            class: "btn btn-outline-danger",
+                                            method: :delete,
+                                            data: {confirm: "Are you sure you want to delete this Profile?"}
+              %>
+            <% end %>
         </div>
         <div class="card-footer text-muted">
           <%= joined_time_ago_in_words(user) %>
