--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,6 +15,15 @@
                     <%= f.text_area :description, rows: 10, class: "form-control", placeholder:"Description of the article" %>
                 </div>
             </div>
+            <div class="form-group row">
+                <%= f.label :category, class: "col-2 col-form-label font-weight-bold text-light" %>
+                <div class="col-md-10"> 
+                    <%= f.collection_select(:category_ids, Category.all, :id, :name,
+                        { prompt: "Make your selection from the list below (can be empty)"},
+                        { multiple: true, size: 5, class: "custom-select shadow rounded" })
+                    %>
+                </div>
+        </div>
             <div class="form-group row justify-content-end">
                 <%= f.submit class:"btn btn-outline-light btn-lg mr-3" %>
                 <%= link_to "Cancel", articles_path, class:"btn btn-outline-light btn-lg" %>
